--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,2 @@
-<h1> {{title}} </h1>
-
-<button (click)="aggregate(1)"> + 1</button>
-
-<span> {{meter}} </span>
-
-<button (click)="aggregate(-1)"> - 1</button>
+<meter-component></meter-component>
+<heroe-component></heroe-component>
