--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<meter-component></meter-component>
-<heroe-component></heroe-component>
+<!-- <meter-component></meter-component>
+<heroe-component></heroe-component> -->
+
+<app-list></app-list>
