--- a/src/app/heroes/heroe/heroe.component.html
+++ b/src/app/heroes/heroe/heroe.component.html
@@ -13,3 +13,12 @@
     <td>Capitalizado: </td>
     <td> {{capitalizedName}} </td>
 </dl>
+
+
+<button (click)="changeName()">
+    Cambiar héroe
+</button>
+
+<button (click)="changeAge()">
+    Cambiar edad
+</button>
