--- a/src/app/heroes/list/list.component.html
+++ b/src/app/heroes/list/list.component.html
@@ -10,10 +10,15 @@
     </li>
 </ul>
 
-<div>
+<div *ngIf="delHeroe !== ''; else noDeleted">
     <h3>Heroe Borrado</h3>
-    <span> {{delHeroe}} </span>
+    <small> {{delHeroe}} </small>
 </div>
+
+<ng-template #noDeleted>
+    <h3>No ha borrado nada</h3>
+</ng-template>
+
 <br>
 
 <button (click)="deleteFirstHeroe()">
