--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<!-- <meter-component></meter-component>
-<heroe-component></heroe-component> -->
+<meter-component></meter-component>
 
-<app-list></app-list>
+<!-- <heroe-component></heroe-component> -->
+
+<!-- <app-list></app-list> -->
