--- a/src/app/heroes/list/list.component.html
+++ b/src/app/heroes/list/list.component.html
@@ -15,6 +15,9 @@
     <small> {{delHeroe}} </small>
 </div>
 
+<!-- Los ng-templates funcionan con una referencia local, en este caso
+cuando el ng if no se cumple llama a esta referencia local y la muestra en
+pantalla  -->
 <ng-template #noDeleted>
     <h3>No ha borrado nada</h3>
 </ng-template>
