Added dbz Module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<meter-component></meter-component>
+<!-- <meter-component></meter-component> -->
 
 <!-- <heroe-component></heroe-component> -->
 
 <!-- <app-list></app-list> -->
+
+<app-main-page></app-main-page>
