--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -4,13 +4,7 @@
 <div class="row">
 
     <div class="col">
-        <h3>Personajes</h3>
-        <hr>
-        <ul>
-            <li> Krillin - 700</li>
-            <li> Goku - 15.000</li>
-            <li> Vegeta - 8.500</li>
-        </ul>
+        <app-characters [characters]="characters"></app-characters>
     </div>
 
     <div class="col">
