Sharing data between parent component and child component @Input

--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -8,21 +8,7 @@
     </div>
 
     <div class="col">
-        <h3>Agregar</h3>
-        <hr>
-
-        <form (ngSubmit)="add()">
-
-            <!-- En estos inputs se esta tanto escuchando como emitiendo con el ngModel
-            el nombre del Character "new" Two way data binding -->
-            <input type="text" placeholder="Nombre" name="name" [(ngModel)]="new.name">
-            <input type="text" placeholder="Poder" name="power" [(ngModel)]="new.power">
-
-            <button type="submit">
-                Agregar
-            </button>
-
-        </form>
+        <app-add [characters]="characters" [new]="new"></app-add>
     </div>
 
 </div>
