--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -4,11 +4,11 @@
 <div class="row">
 
     <div class="col">
-        <app-characters [characters]="characters"></app-characters>
+        <app-characters></app-characters>
     </div>
 
     <div class="col">
-        <app-add [new]="new" (onNewCharacter)="addCharacter($event)"></app-add>
+        <app-add [new]="new"></app-add>
     </div>
 
 </div>
